# void

./: AUTHORS.md  CONTRIBUTING.md  NOTICE.md  README.md  components.json  index.html  package-lock.json  package.json  tailwind.config.js  third_party_licenses.json  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
.github/: FUNDING.yml
db/: 000451.sst  IDENTITY  MANIFEST-000446  OPTIONS-000448
src/: App.vue  app.html  main.ts
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/settings/: settings.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/commands/: explorer.rs  settings.rs
src-tauri/src/commands/audio/: mod.rs
src-tauri/src/commands/canvas/: mod.rs
src-tauri/src/commands/database/: mod.rs
src-tauri/src/commands/database/entities/: entity_errors.rs  entity_interface.rs  entity_repositorty.rs  entity_repository.rs  main_config.rs  mod.rs  plugin_list.rs  plugin_settings.rs  side_repos.rs  themes_list.rs
src-tauri/src/commands/environment/: mod.rs
src-tauri/src/commands/explorer/: mod.rs
src-tauri/src/commands/filesystem/: mod.rs
src-tauri/src/commands/notes/: mod.rs
src-tauri/src/commands/plugin_builder/: mod.rs
src-tauri/src/commands/plugins/: mod.rs
src-tauri/src/commands/settings/: mod.rs
src-tauri/src/commands/side_repos/: mod.rs
src-tauri/src/commands/terminal/: mod.rs
src-tauri/src/commands/themes/: mod.rs
src-tauri/src/commands/video/: mod.rs
src/assets/css/: global.css
src/components/editor/bold/: bold.ts
src/components/editor/callout/: callout.ts
src/components/editor/code-block/: codeblock.ts
src/components/editor/headers/: headers.ts
src/components/editor/inline/: inline.ts
src/components/editor/inline-factory/: factory.ts
src/components/editor/italic/: italic.ts
src/components/editor/lists/: lists.ts
src/components/editor/page-breaker/: page-breaker.ts
src/components/editor/quote/: quote.ts
src/components/editor/scroll/: scroll.ts
src/components/editor/strike-through/: strike-through.ts
src/components/editor/tags/: tags.ts
src/components/editor/todo/: todo.ts
src/components/ui/blur-reveal/: BlurReveal.vue
src/components/ui/input/: Input.vue
src/components/ui/interactive-hover-button/: InteractiveHoverButton.vue
src/components/ui/lamp-effect/: LampEffect.vue
src/components/ui/profile/: Card.vue
src/components/ui/settings/: SettingsButton.vue  SettingsComposition.vue  SettingsField.vue  SettingsHeader.vue  SettingsPopup.vue  SettingsSelector.vue  SettingsSeparator.vue
src/components/ui/side-panel/: SidePanel.vue
src/components/ui/sidebar/: utils.ts  (+1 more)
src/lib/: utils.ts
src/lib/components/: Dashboard.svelte  DashboardNameForm.svelte  Explorer.svelte  Leftbar.svelte  Settings.svelte  Topbar.svelte  WelcomeAnim.svelte  store.js
src/lib/logic/: account-setup.ts  editorpluginsstore.ts  explorerstore.ts  extensions.ts  md-notes.ts  settings.ts  sidebarstore.ts  themestore.ts  utils.ts  welcome.ts
src/locales/: en.json  ru.json
src/router/: index.ts
src/routes/: +page.svelte
src/tests/: init.test.ts
src/tests/lib/: utils.test.ts
src/types/: main.d.ts
src/views/: AudioContent.vue  Dashboard.vue  ExcalidrawWrapper.vue  Global.vue  Home.vue  ImageContent.vue  JournalContent.vue  Loader.vue  NoteContent.vue  Plugins.vue  Settings.vue  SettingsSelector.vue  SideRepos.vue  Terminal.vue  Themes.vue  UnsupportedContent.vue  VideoContent.vue  WelcomeAnimation.vue  WelcomeSetup.vue
static/: global.css
(+16 files in other folders)
