[package]
name = "topaz"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "topaz_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = ["macos-private-api"] }
tauri-plugin-opener = "2.2.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tauri-plugin-dialog = "2.2.2"
portable-pty = "0.9.0"
lazy_static = "1.5.0"
base64 = "0.22.1"
surrealdb = { version = "2.3.3", features = ["kv-rocksdb"] }
thiserror = "2.0.12"
once_cell = "1.21.3"
rust-fetch = "0.1.0"
libc = "0.2.172"
tauri-plugin-fs = {version = "2.3.0", features = ["watch"]}
jwalk = "0.8.1"
lofty = "0.22.4"

urlencoding = "2.1"
tokio-util = { version = "0.7.15", features = ["codec"] }
warp = "0.3"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
futures = "0.3"
hyper = "0.14"
